# py-stopwatch

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/stopwatch/: __init__.py  stopwatch.py
